update search added isPainted
